--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - SMTP_USER=${SMTP_USER:-}
       - SMTP_PASS=${SMTP_PASS:-}
       - MAIL_FROM=${MAIL_FROM:-noreply@openelo.org}
-      - MAIL_FROM_NAME=${MAIL_FROM_NAME:-OpenElo}
+      - MAIL_FROM_NAME=${MAIL_FROM_NAME:-OpenELO}
       - TOKEN_EXPIRY_HOURS=${TOKEN_EXPIRY_HOURS:-72}
       - ELO_START=${ELO_START:-1200}
     restart: unless-stopped
