--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ SMTP_PORT=587
 SMTP_USER=
 SMTP_PASS=
 MAIL_FROM=noreply@openelo.org
-MAIL_FROM_NAME=OpenElo
+MAIL_FROM_NAME=OpenELO
 
 # Tokens
 TOKEN_EXPIRY_HOURS=72
