--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@ Dockerfile                  export-ignore
 example.lftp                export-ignore
 Makefile                    export-ignore
 README.md                   export-ignore
+env.php.example             export-ignore
 .env.example                export-ignore
 .gitattributes              export-ignore
 .gitignore                  export-ignore
