--- a/env.php.example
+++ b/env.php.example
@@ -21,7 +21,7 @@ if (basename($_SERVER['SCRIPT_FILENAME']) === basename(__FILE__)) {
 putenv('DB_TYPE=sqlite');
 
 // SQLite Configuration (only if DB_TYPE=sqlite)
-putenv('DB_PATH=/path/to/your/data/openelo.db');
+putenv('DB_PATH='.__DIR__.'/data/openelo.db');
 
 // MySQL Configuration (only if DB_TYPE=mysql)
 putenv('DB_HOST=localhost');
@@ -39,7 +39,7 @@ putenv('MAIL_FROM=noreply@yourdomain.com');
 putenv('MAIL_FROM_NAME=OpenELO');
 
 // Application Settings
-putenv('BASE_URL=https://yourdomain.com');
+putenv('BASE_URL=https://openelo.org');
 putenv('TOKEN_EXPIRY_HOURS=72');
 
 // ELO Settings
