--- a/env.php.example
+++ b/env.php.example
@@ -37,6 +37,7 @@ putenv('SMTP_USER=your-email@example.com');
 putenv('SMTP_PASS=your-smtp-password');
 putenv('MAIL_FROM=noreply@yourdomain.com');
 putenv('MAIL_FROM_NAME=OpenELO');
+putenv('ADMIN_EMAIL=admin@yourdomain.com');
 
 // Application Settings
 putenv('BASE_URL=https://openelo.org');
