--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,16 @@ PORT=8080
 BASE_URL=http://localhost:8080
 DEFAULT_LANG=en
 
-# Database (SQLite path)
+# Database
+DB_TYPE=sqlite
+# SQLite
 DB_PATH=/var/www/html/data/openelo.db
+# MySQL (only if DB_TYPE=mysql)
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=openelo
+DB_USER=root
+DB_PASSWORD=
 
 # Email (SMTP)
 SMTP_HOST=smtp.example.com
@@ -15,6 +23,7 @@ SMTP_USER=
 SMTP_PASS=
 MAIL_FROM=noreply@openelo.org
 MAIL_FROM_NAME=OpenELO
+ADMIN_EMAIL=admin@openelo.org
 
 # Tokens
 TOKEN_EXPIRY_HOURS=72
