--- a/env.php.example
+++ b/env.php.example
@@ -48,3 +48,6 @@ putenv('ELO_START=1200');
 
 // Language
 putenv('DEFAULT_LANG=en');
+
+// Environment identifier (empty=production, any other value=non-production environment)
+putenv('APP_ENV=');
