--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@
 PORT=8080
 BASE_URL=http://localhost:8080
 DEFAULT_LANG=en
+# Environment identifier (empty=production, any other value=non-production environment)
+APP_ENV=
 
 # Database
 DB_TYPE=sqlite
